--- a/src/App.scss
+++ b/src/App.scss
@@ -38,30 +38,37 @@
         display: inline;
       }
     }
-    .zip-label {
-      margin-top: 75px;
-      margin-right: 152px;
-      padding-bottom: 5px;
-      font-size: 20px;
-      font-weight: 400;
-    }
-    #zipcode {
-      border-radius: 4px;
-      border: 2px solid#A9A9A9;
-      height: 40px;
-      width: 140px;
-      margin-right: 20px;
-      margin-left: 125px;
-      padding-left: 15px;
-      font-size: 18px;
-      font-weight: 100;
-    }
-    .update-btn {
-      height: 45px;
-      width: 185px;
-      border-radius: 9px;
-      font-size: 20px;
-      font-weight: 600;
+    form {
+      margin-right: 15%;
+      .zip-label {
+        margin-top: 75px;
+        margin-right: 152px;
+        padding-bottom: 5px;
+        font-size: 20px;
+        font-weight: 400;
+      }
+      #zipcode {
+        border-radius: 4px;
+        border: 2px solid#A9A9A9;
+        height: 40px;
+        width: 140px;
+        margin-right: 20px;
+        margin-left: 125px;
+        padding-left: 15px;
+        font-size: 18px;
+        font-weight: 100;
+      }
+      .update-btn {
+        height: 45px;
+        width: 185px;
+        border-radius: 9px;
+        font-size: 20px;
+        font-weight: 600;
+        background-color: #dcdcdc;
+        color: #696969;
+        box-shadow: inset 1px 1px 20px 0 #dcdcdc;
+        text-shadow: 1px 1px 20px #dcdcdc;
+      }
     }
   }
 }
