--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   text-align: center;
   .app-container {
     width: 60rem;
-    margin-left: 26%;
+    margin: auto;
     margin-top: 3%;
     .location-container {
       padding-bottom: 55px;
